@@ -9,6 +9,10 @@ build.xml (jsp)
 * will build war w/out jars in WEB-INF/lib if property jdk1.4 is defined.
 * removed files from war that shouldn't be included. Patch by Matt Albrecht
 
+ClearCase Sourcecontrol
+----------------------
+* Fixed bug with ClearCase version 2002.05.00 that hindered sending email. Patch by Ian Colledge
+
 CruiseControlTagSupport
 ----------------------
 * minor change for compatibility with jdk 1.3 - Patch by Thai Thanh Ha
